@@ -1,3 +1,8 @@
+2006-06-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: finalized the order of operations when
+	  performing a move.
+
 2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: use new copy_block() in copy_filesystem()
